# rest-actix-rust

./: .env.example  Cargo.toml  actix.postman_collection.json
.cargo/: config.toml
migrations/2026-01-23-212014-0000_create_persons/: up.sql
migrations/2026-01-26-171624-0000_create_users/: up.sql
migrations/2026-01-26-192951-0000_add_unique_constraints/: down.sql  up.sql
migrations/2026-02-07-221302-0000_add_role_check/: down.sql  up.sql
migrations/2026-02-07-231922-0000_seed_default_admin/: down.sql  up.sql
migrations/2026-02-08-020249-0000_mock_person/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/auth/: claims.rs  claims_extractor.rs  jwt.rs  middleware.rs  mod.rs
src/bootstrap/: http_server.rs  mod.rs
src/config/: app_config.rs
src/controller/: auth_controller.rs  mod.rs  person_controller.rs  user_controller.rs
src/dto/: auth_dto.rs  hateoas.rs  mod.rs  person_dto.rs  user_dto.rs
src/error/: mod.rs  user_service_error.rs
src/model/: mod.rs  person.rs  role.rs  user.rs
src/repository/: mod.rs  person_repository.rs  user_repository.rs
src/service/: auth_service.rs  db.rs  mod.rs  person_service.rs  user_service.rs
src/util/: app_state.rs
