[package]
name = "rest-actix-rust"
authors=["Abner Kaizer <mail@abnerkaizer.com>"]
version = "0.1.0"
license="MIT"
edition = "2024"



[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"

diesel = { version = "2.3", features = ["postgres", "r2d2", "uuid"] }
dotenvy = "0.15"

validator = { version = "0.18", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
lto = "fat"
panic = "abort"
incremental = false
rpath = false
strip = true
