[package]
name = "rest-actix-rust"
authors=["Abner Kaizer <mail@abnerkaizer.com>"]
version = "0.1.0"
license="MIT"
edition = "2024"



[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"

jsonwebtoken = {version = "10.3.0", features = ["rust_crypto"]}
chrono = {version = "0.4.43", features = ["serde"]}
bcrypt = "0.18.0"

diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"

cpf_util = "0.1.1"
uuid = { version = "1", features = ["serde", "v4"] }
futures-util = "0.3.31"
actix-cors = "0.7.1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
lto = "fat"
panic = "abort"
incremental = false
rpath = false
strip = true
